--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,19 @@
   margin: 0;
   padding: 0;
 }
-
 /* CSS reset ends*/
 
 /* General styles begins*/
 body {
   min-height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #3aafa9;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+  background-color: #e9e9e9;
+  color: #17252a;
+
+  /* Following styles keep the gallery component centered */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 /* General styles ends*/
