--- a/src/components/GalleryGrid/GalleryGrid.css
+++ b/src/components/GalleryGrid/GalleryGrid.css
@@ -1,50 +1,94 @@
-.gallery__no-image {
-  font-size: 2rem;
-  text-align: center;
-  padding: 5rem;
-}
-
-.gallery__grid {
+.gallery-grid {
   display: grid;
-  grid-template-columns: repeat(4, minmax(150px, 1fr));
-  gap: 30px;
+  grid-template-columns: repeat(4, minmax(135px, 1fr));
+  gap: 2rem;
   justify-items: center;
   padding: 2rem;
-  max-width: 1000px;
 }
 
-.gallery__grid__image {
-  display: block;
-  max-width: 100%;
-  border-radius: 0.75rem;
+.btn-delete {
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1.5rem;
   border: 1px solid #17252a;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 0.05rem;
   cursor: pointer;
   transition: all 0.15s ease-in;
 }
 
-.gallery__grid__image:hover {
-  filter: brightness(0.5);
+.btn-delete:hover {
+  background-color: #ff738f;
   transform: scale(1.1);
-  border: 2px solid #3aafa9;
+  border: 1px solid #17252a;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-.gallery__grid__image:active {
+.btn-delete:active {
   transform: scale(0.95);
 }
 
-.gallery__grid__image:first-child {
+.btn-delete__icon {
+  width: 20px;
+  height: 20px;
+}
+
+.gallery-grid__image-wrapper {
+  position: relative; /* This has been applied to postion the checkbox absolutely. */
+}
+
+/* Makes the featured image occupy larger space */
+.gallery-grid__image-wrapper:first-of-type {
   grid-column: 1 / 3;
-  grid-row: 1 / 3;
+  grid-row: 2 / 4;
+}
+
+.gallery-grid__add-images {
+  max-width: 100%;
+  border-radius: 0.5rem;
+  border: 1px dashed #17252a;
+  cursor: pointer;
+  transition: all 0.15s ease-in;
+}
+
+.gallery-grid__add-images:hover {
+  transform: scale(1.1);
+  border: 2px dashed #17252a;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.gallery-grid__add-images:active {
+  transform: scale(0.95);
 }
 
 @media (max-width: 700px) {
-  .gallery__grid {
+  .gallery-grid {
     grid-template-columns: repeat(3, minmax(50px, 1fr));
+  }
+  .btn-delete {
+    padding: 1rem;
+    font-size: 0.85rem;
+    gap: 0.75rem;
   }
 }
 
-@media (max-width: 300px) {
-  .gallery__grid {
+@media (max-width: 400px) {
+  .gallery-grid {
     grid-template-columns: repeat(2, minmax(50px, 1fr));
+  }
+  .btn-delete {
+    padding: 0.5rem;
+    font-size: 0.75rem;
+    gap: 0.5rem;
+  }
+  .btn-delete__icon {
+    width: 15px;
+    height: 15px;
   }
 }
